FIX: better alignment for search form

--- a/client/src/scss/types/model-search.scss
+++ b/client/src/scss/types/model-search.scss
@@ -37,7 +37,7 @@
         display: flex;
         width: auto;
         margin: -3.5rem -0.5rem 0 -0.5rem;
-        align-items: flex-end;
+        align-items: flex-start;
 
         flex-wrap: wrap;
         > .field {
